# fast_zero

./: .coverage  .env  .gitmodules  README.md  pyproject.toml
src/fast_zero/: app.py
src/fast_zero/api/: routes.py
src/fast_zero/db/: connection.py
src/fast_zero/schemas/: pncp.py
src/fast_zero/services/: pncp.py
tests/: test_app.py
